# HMM-Viterbi-CUDA

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.MD  build.sh  simple.in  test.sh
headers/: driver.h  viterbi_cuda.h  viterbi_cuda_before.h  viterbi_sequential.h
src/: driver.c  driver.cu  dumb.cu  test.cu  viterbi_cuda.cu  viterbi_cuda_before.cu  viterbi_sequential.c  viterbi_sequential.cu
util/: generator.c
